--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
-    "bootstrap": "^4.6.0",
-    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "nuxt-buefy": "^0.4.8"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
